2005-03-22  Marco Pantaleoni  <panta@elasticworld.org>

	* added expat-based xml module.

2005-03-20  Marco Pantaleoni  <panta@elasticworld.org>

        * added documentation strings for functions.

	* src/elastic_s.l: added binary constants parsing (0bBBB...),
        where B can be 0 or 1. For example 0b1010 is decimal 10.

	* src/elastic_s.l: fixed octal constants parsing (0NNN...).

2005-03-18  Marco Pantaleoni  <panta@elasticworld.org>

	* src/ast.* src/elastic_s.l src/elastic_p.y: added also another
        syntax for arrays. Now it's possible to write

	      {val1, val2, ...}

	Empty arrays are specified as {,}, and arrays with one element
	as {value,}

	* src/ast.* src/elastic_s.l src/elastic_p.y: added new syntax
        for arrays.
	Now it's possible to write

	      (val1, val2, ...)

	Empty arrays are specified as (,), and arrays with one element
	as (value,) (to avoid conflicts with expressions).

	* src/ast.* src/elastic_s.l src/elastic_p.y: added new syntax
	for hash tables. Now it's possible to write
	{key : value, key : value ...}

2005-03-17  Marco Pantaleoni  <panta@elasticworld.org>

	* src/types/string.c (string_mod): added named parametes support
	to '%' string operator.

2005-03-08  Marco Pantaleoni  <panta@elasticworld.org>

	* src/elastic_p.y: removed dependency on fprintf(). Now uses
	ec_stderr_*printf().

	* src/elastic_s.l: removed dependency on fwrite() and fprintf().
	Now uses ec_stream_write() and ec_stderr_*printf().

	* src/modules/stream_m.c (EcLibStream_Gets): Fixed EOF condition
	handling.

	* src/compile.c (compileVariable) src/ec.c src/ecc.c src/ec2c.c:
	added a 'lazy' option. When enabled allows implicit parameter
	declaration (read: you can omit variable declaration, *only* for
	package and function/method variables).

	* ...: abandoned libc stdio wherever possible and switched to
	the new stream mechanism. This allows to use esotic streams
	for elastiC input/output.

2005-03-04  Marco Pantaleoni  <panta@elasticworld.org>
